samples/_failures_safe/1761162348_88bbc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c016d74d.c: In function ‘main’:
./samples/SAFE/__tmp_c016d74d.c:160:11: error: expected ‘;’ at end of input
  160 |     result
      |           ^
      |           ;
./samples/SAFE/__tmp_c016d74d.c:160:5: error: expected declaration or statement at end of input
  160 |     result
      |     ^~~~~~
